parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> sec_dev sec_cmd
Rule 2     sec_dev -> DISPOSITIVOS : lista_devices FIMDISPOSITIVOS
Rule 3     lista_devices -> linha_device lista_devices
Rule 4     lista_devices -> linha_device
Rule 5     linha_device -> ID
Rule 6     linha_device -> ID [ ID ]
Rule 7     sec_cmd -> lista_cmd
Rule 8     lista_cmd -> cmd ; lista_cmd
Rule 9     lista_cmd -> cmd ;
Rule 10    cmd -> atribuicao
Rule 11    cmd -> obsv_acao
Rule 12    cmd -> acao
Rule 13    atribuicao -> DEF ID = valor
Rule 14    obsv_acao -> QUANDO observacao : acao
Rule 15    obsv_acao -> QUANDO observacao : acao SENAO acao
Rule 16    observacao -> ID OP_LOGIC valor
Rule 17    observacao -> ID OP_LOGIC valor AND observacao
Rule 18    valor -> NUM
Rule 19    valor -> BOOL
Rule 20    valor -> ID
Rule 21    acao -> EXECUTE LIGAR EM ID
Rule 22    acao -> EXECUTE LIGAR ID
Rule 23    acao -> FACA LIGAR EM ID
Rule 24    acao -> FACA LIGAR ID
Rule 25    acao -> EXECUTE DESLIGAR EM ID
Rule 26    acao -> EXECUTE DESLIGAR ID
Rule 27    acao -> FACA DESLIGAR EM ID
Rule 28    acao -> FACA DESLIGAR ID
Rule 29    acao -> ALERTA PARA ID : MSG
Rule 30    acao -> ALERTA PARA ID : MSG , ID
Rule 31    acao -> DIFUNDIR : MSG ARROW [ lista_ids ]
Rule 32    acao -> DIFUNDIR : MSG ID ARROW [ lista_ids ]
Rule 33    lista_ids -> ID
Rule 34    lista_ids -> ID , lista_ids

Terminals, with rules where they appear

,                    : 30 34
:                    : 2 14 15 29 30 31 32
;                    : 8 9
=                    : 13
ALERTA               : 29 30
AND                  : 17
ARROW                : 31 32
BOOL                 : 19
DEF                  : 13
DESLIGAR             : 25 26 27 28
DIFUNDIR             : 31 32
DISPOSITIVOS         : 2
EM                   : 21 23 25 27
EXECUTE              : 21 22 25 26
FACA                 : 23 24 27 28
FIMDISPOSITIVOS      : 2
ID                   : 5 6 6 13 16 17 20 21 22 23 24 25 26 27 28 29 30 30 32 33 34
LIGAR                : 21 22 23 24
MSG                  : 29 30 31 32
NUM                  : 18
OP_LOGIC             : 16 17
PARA                 : 29 30
QUANDO               : 14 15
SENAO                : 15
[                    : 6 31 32
]                    : 6 31 32
error                : 

Nonterminals, with rules where they appear

acao                 : 12 14 15 15
atribuicao           : 10
cmd                  : 8 9
linha_device         : 3 4
lista_cmd            : 7 8
lista_devices        : 2 3
lista_ids            : 31 32 34
observacao           : 14 15 17
obsv_acao            : 11
programa             : 0
sec_cmd              : 1
sec_dev              : 1
valor                : 13 16 17

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . sec_dev sec_cmd
    (2) sec_dev -> . DISPOSITIVOS : lista_devices FIMDISPOSITIVOS

    DISPOSITIVOS    shift and go to state 3

    programa                       shift and go to state 1
    sec_dev                        shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> sec_dev . sec_cmd
    (7) sec_cmd -> . lista_cmd
    (8) lista_cmd -> . cmd ; lista_cmd
    (9) lista_cmd -> . cmd ;
    (10) cmd -> . atribuicao
    (11) cmd -> . obsv_acao
    (12) cmd -> . acao
    (13) atribuicao -> . DEF ID = valor
    (14) obsv_acao -> . QUANDO observacao : acao
    (15) obsv_acao -> . QUANDO observacao : acao SENAO acao
    (21) acao -> . EXECUTE LIGAR EM ID
    (22) acao -> . EXECUTE LIGAR ID
    (23) acao -> . FACA LIGAR EM ID
    (24) acao -> . FACA LIGAR ID
    (25) acao -> . EXECUTE DESLIGAR EM ID
    (26) acao -> . EXECUTE DESLIGAR ID
    (27) acao -> . FACA DESLIGAR EM ID
    (28) acao -> . FACA DESLIGAR ID
    (29) acao -> . ALERTA PARA ID : MSG
    (30) acao -> . ALERTA PARA ID : MSG , ID
    (31) acao -> . DIFUNDIR : MSG ARROW [ lista_ids ]
    (32) acao -> . DIFUNDIR : MSG ID ARROW [ lista_ids ]

    DEF             shift and go to state 10
    QUANDO          shift and go to state 11
    EXECUTE         shift and go to state 12
    FACA            shift and go to state 13
    ALERTA          shift and go to state 14
    DIFUNDIR        shift and go to state 15

    sec_cmd                        shift and go to state 4
    lista_cmd                      shift and go to state 5
    cmd                            shift and go to state 6
    atribuicao                     shift and go to state 7
    obsv_acao                      shift and go to state 8
    acao                           shift and go to state 9

state 3

    (2) sec_dev -> DISPOSITIVOS . : lista_devices FIMDISPOSITIVOS

    :               shift and go to state 16


state 4

    (1) programa -> sec_dev sec_cmd .

    $end            reduce using rule 1 (programa -> sec_dev sec_cmd .)


state 5

    (7) sec_cmd -> lista_cmd .

    $end            reduce using rule 7 (sec_cmd -> lista_cmd .)


state 6

    (8) lista_cmd -> cmd . ; lista_cmd
    (9) lista_cmd -> cmd . ;

    ;               shift and go to state 17


state 7

    (10) cmd -> atribuicao .

    ;               reduce using rule 10 (cmd -> atribuicao .)


state 8

    (11) cmd -> obsv_acao .

    ;               reduce using rule 11 (cmd -> obsv_acao .)


state 9

    (12) cmd -> acao .

    ;               reduce using rule 12 (cmd -> acao .)


state 10

    (13) atribuicao -> DEF . ID = valor

    ID              shift and go to state 18


state 11

    (14) obsv_acao -> QUANDO . observacao : acao
    (15) obsv_acao -> QUANDO . observacao : acao SENAO acao
    (16) observacao -> . ID OP_LOGIC valor
    (17) observacao -> . ID OP_LOGIC valor AND observacao

    ID              shift and go to state 20

    observacao                     shift and go to state 19

state 12

    (21) acao -> EXECUTE . LIGAR EM ID
    (22) acao -> EXECUTE . LIGAR ID
    (25) acao -> EXECUTE . DESLIGAR EM ID
    (26) acao -> EXECUTE . DESLIGAR ID

    LIGAR           shift and go to state 21
    DESLIGAR        shift and go to state 22


state 13

    (23) acao -> FACA . LIGAR EM ID
    (24) acao -> FACA . LIGAR ID
    (27) acao -> FACA . DESLIGAR EM ID
    (28) acao -> FACA . DESLIGAR ID

    LIGAR           shift and go to state 23
    DESLIGAR        shift and go to state 24


state 14

    (29) acao -> ALERTA . PARA ID : MSG
    (30) acao -> ALERTA . PARA ID : MSG , ID

    PARA            shift and go to state 25


state 15

    (31) acao -> DIFUNDIR . : MSG ARROW [ lista_ids ]
    (32) acao -> DIFUNDIR . : MSG ID ARROW [ lista_ids ]

    :               shift and go to state 26


state 16

    (2) sec_dev -> DISPOSITIVOS : . lista_devices FIMDISPOSITIVOS
    (3) lista_devices -> . linha_device lista_devices
    (4) lista_devices -> . linha_device
    (5) linha_device -> . ID
    (6) linha_device -> . ID [ ID ]

    ID              shift and go to state 29

    lista_devices                  shift and go to state 27
    linha_device                   shift and go to state 28

state 17

    (8) lista_cmd -> cmd ; . lista_cmd
    (9) lista_cmd -> cmd ; .
    (8) lista_cmd -> . cmd ; lista_cmd
    (9) lista_cmd -> . cmd ;
    (10) cmd -> . atribuicao
    (11) cmd -> . obsv_acao
    (12) cmd -> . acao
    (13) atribuicao -> . DEF ID = valor
    (14) obsv_acao -> . QUANDO observacao : acao
    (15) obsv_acao -> . QUANDO observacao : acao SENAO acao
    (21) acao -> . EXECUTE LIGAR EM ID
    (22) acao -> . EXECUTE LIGAR ID
    (23) acao -> . FACA LIGAR EM ID
    (24) acao -> . FACA LIGAR ID
    (25) acao -> . EXECUTE DESLIGAR EM ID
    (26) acao -> . EXECUTE DESLIGAR ID
    (27) acao -> . FACA DESLIGAR EM ID
    (28) acao -> . FACA DESLIGAR ID
    (29) acao -> . ALERTA PARA ID : MSG
    (30) acao -> . ALERTA PARA ID : MSG , ID
    (31) acao -> . DIFUNDIR : MSG ARROW [ lista_ids ]
    (32) acao -> . DIFUNDIR : MSG ID ARROW [ lista_ids ]

    $end            reduce using rule 9 (lista_cmd -> cmd ; .)
    DEF             shift and go to state 10
    QUANDO          shift and go to state 11
    EXECUTE         shift and go to state 12
    FACA            shift and go to state 13
    ALERTA          shift and go to state 14
    DIFUNDIR        shift and go to state 15

    cmd                            shift and go to state 6
    lista_cmd                      shift and go to state 30
    atribuicao                     shift and go to state 7
    obsv_acao                      shift and go to state 8
    acao                           shift and go to state 9

state 18

    (13) atribuicao -> DEF ID . = valor

    =               shift and go to state 31


state 19

    (14) obsv_acao -> QUANDO observacao . : acao
    (15) obsv_acao -> QUANDO observacao . : acao SENAO acao

    :               shift and go to state 32


state 20

    (16) observacao -> ID . OP_LOGIC valor
    (17) observacao -> ID . OP_LOGIC valor AND observacao

    OP_LOGIC        shift and go to state 33


state 21

    (21) acao -> EXECUTE LIGAR . EM ID
    (22) acao -> EXECUTE LIGAR . ID

    EM              shift and go to state 34
    ID              shift and go to state 35


state 22

    (25) acao -> EXECUTE DESLIGAR . EM ID
    (26) acao -> EXECUTE DESLIGAR . ID

    EM              shift and go to state 36
    ID              shift and go to state 37


state 23

    (23) acao -> FACA LIGAR . EM ID
    (24) acao -> FACA LIGAR . ID

    EM              shift and go to state 38
    ID              shift and go to state 39


state 24

    (27) acao -> FACA DESLIGAR . EM ID
    (28) acao -> FACA DESLIGAR . ID

    EM              shift and go to state 40
    ID              shift and go to state 41


state 25

    (29) acao -> ALERTA PARA . ID : MSG
    (30) acao -> ALERTA PARA . ID : MSG , ID

    ID              shift and go to state 42


state 26

    (31) acao -> DIFUNDIR : . MSG ARROW [ lista_ids ]
    (32) acao -> DIFUNDIR : . MSG ID ARROW [ lista_ids ]

    MSG             shift and go to state 43


state 27

    (2) sec_dev -> DISPOSITIVOS : lista_devices . FIMDISPOSITIVOS

    FIMDISPOSITIVOS shift and go to state 44


state 28

    (3) lista_devices -> linha_device . lista_devices
    (4) lista_devices -> linha_device .
    (3) lista_devices -> . linha_device lista_devices
    (4) lista_devices -> . linha_device
    (5) linha_device -> . ID
    (6) linha_device -> . ID [ ID ]

    FIMDISPOSITIVOS reduce using rule 4 (lista_devices -> linha_device .)
    ID              shift and go to state 29

    linha_device                   shift and go to state 28
    lista_devices                  shift and go to state 45

state 29

    (5) linha_device -> ID .
    (6) linha_device -> ID . [ ID ]

    ID              reduce using rule 5 (linha_device -> ID .)
    FIMDISPOSITIVOS reduce using rule 5 (linha_device -> ID .)
    [               shift and go to state 46


state 30

    (8) lista_cmd -> cmd ; lista_cmd .

    $end            reduce using rule 8 (lista_cmd -> cmd ; lista_cmd .)


state 31

    (13) atribuicao -> DEF ID = . valor
    (18) valor -> . NUM
    (19) valor -> . BOOL
    (20) valor -> . ID

    NUM             shift and go to state 49
    BOOL            shift and go to state 50
    ID              shift and go to state 47

    valor                          shift and go to state 48

state 32

    (14) obsv_acao -> QUANDO observacao : . acao
    (15) obsv_acao -> QUANDO observacao : . acao SENAO acao
    (21) acao -> . EXECUTE LIGAR EM ID
    (22) acao -> . EXECUTE LIGAR ID
    (23) acao -> . FACA LIGAR EM ID
    (24) acao -> . FACA LIGAR ID
    (25) acao -> . EXECUTE DESLIGAR EM ID
    (26) acao -> . EXECUTE DESLIGAR ID
    (27) acao -> . FACA DESLIGAR EM ID
    (28) acao -> . FACA DESLIGAR ID
    (29) acao -> . ALERTA PARA ID : MSG
    (30) acao -> . ALERTA PARA ID : MSG , ID
    (31) acao -> . DIFUNDIR : MSG ARROW [ lista_ids ]
    (32) acao -> . DIFUNDIR : MSG ID ARROW [ lista_ids ]

    EXECUTE         shift and go to state 12
    FACA            shift and go to state 13
    ALERTA          shift and go to state 14
    DIFUNDIR        shift and go to state 15

    acao                           shift and go to state 51

state 33

    (16) observacao -> ID OP_LOGIC . valor
    (17) observacao -> ID OP_LOGIC . valor AND observacao
    (18) valor -> . NUM
    (19) valor -> . BOOL
    (20) valor -> . ID

    NUM             shift and go to state 49
    BOOL            shift and go to state 50
    ID              shift and go to state 47

    valor                          shift and go to state 52

state 34

    (21) acao -> EXECUTE LIGAR EM . ID

    ID              shift and go to state 53


state 35

    (22) acao -> EXECUTE LIGAR ID .

    ;               reduce using rule 22 (acao -> EXECUTE LIGAR ID .)
    SENAO           reduce using rule 22 (acao -> EXECUTE LIGAR ID .)


state 36

    (25) acao -> EXECUTE DESLIGAR EM . ID

    ID              shift and go to state 54


state 37

    (26) acao -> EXECUTE DESLIGAR ID .

    ;               reduce using rule 26 (acao -> EXECUTE DESLIGAR ID .)
    SENAO           reduce using rule 26 (acao -> EXECUTE DESLIGAR ID .)


state 38

    (23) acao -> FACA LIGAR EM . ID

    ID              shift and go to state 55


state 39

    (24) acao -> FACA LIGAR ID .

    ;               reduce using rule 24 (acao -> FACA LIGAR ID .)
    SENAO           reduce using rule 24 (acao -> FACA LIGAR ID .)


state 40

    (27) acao -> FACA DESLIGAR EM . ID

    ID              shift and go to state 56


state 41

    (28) acao -> FACA DESLIGAR ID .

    ;               reduce using rule 28 (acao -> FACA DESLIGAR ID .)
    SENAO           reduce using rule 28 (acao -> FACA DESLIGAR ID .)


state 42

    (29) acao -> ALERTA PARA ID . : MSG
    (30) acao -> ALERTA PARA ID . : MSG , ID

    :               shift and go to state 57


state 43

    (31) acao -> DIFUNDIR : MSG . ARROW [ lista_ids ]
    (32) acao -> DIFUNDIR : MSG . ID ARROW [ lista_ids ]

    ARROW           shift and go to state 58
    ID              shift and go to state 59


state 44

    (2) sec_dev -> DISPOSITIVOS : lista_devices FIMDISPOSITIVOS .

    DEF             reduce using rule 2 (sec_dev -> DISPOSITIVOS : lista_devices FIMDISPOSITIVOS .)
    QUANDO          reduce using rule 2 (sec_dev -> DISPOSITIVOS : lista_devices FIMDISPOSITIVOS .)
    EXECUTE         reduce using rule 2 (sec_dev -> DISPOSITIVOS : lista_devices FIMDISPOSITIVOS .)
    FACA            reduce using rule 2 (sec_dev -> DISPOSITIVOS : lista_devices FIMDISPOSITIVOS .)
    ALERTA          reduce using rule 2 (sec_dev -> DISPOSITIVOS : lista_devices FIMDISPOSITIVOS .)
    DIFUNDIR        reduce using rule 2 (sec_dev -> DISPOSITIVOS : lista_devices FIMDISPOSITIVOS .)


state 45

    (3) lista_devices -> linha_device lista_devices .

    FIMDISPOSITIVOS reduce using rule 3 (lista_devices -> linha_device lista_devices .)


state 46

    (6) linha_device -> ID [ . ID ]

    ID              shift and go to state 60


state 47

    (20) valor -> ID .

    ;               reduce using rule 20 (valor -> ID .)
    AND             reduce using rule 20 (valor -> ID .)
    :               reduce using rule 20 (valor -> ID .)


state 48

    (13) atribuicao -> DEF ID = valor .

    ;               reduce using rule 13 (atribuicao -> DEF ID = valor .)


state 49

    (18) valor -> NUM .

    ;               reduce using rule 18 (valor -> NUM .)
    AND             reduce using rule 18 (valor -> NUM .)
    :               reduce using rule 18 (valor -> NUM .)


state 50

    (19) valor -> BOOL .

    ;               reduce using rule 19 (valor -> BOOL .)
    AND             reduce using rule 19 (valor -> BOOL .)
    :               reduce using rule 19 (valor -> BOOL .)


state 51

    (14) obsv_acao -> QUANDO observacao : acao .
    (15) obsv_acao -> QUANDO observacao : acao . SENAO acao

    ;               reduce using rule 14 (obsv_acao -> QUANDO observacao : acao .)
    SENAO           shift and go to state 61


state 52

    (16) observacao -> ID OP_LOGIC valor .
    (17) observacao -> ID OP_LOGIC valor . AND observacao

    :               reduce using rule 16 (observacao -> ID OP_LOGIC valor .)
    AND             shift and go to state 62


state 53

    (21) acao -> EXECUTE LIGAR EM ID .

    ;               reduce using rule 21 (acao -> EXECUTE LIGAR EM ID .)
    SENAO           reduce using rule 21 (acao -> EXECUTE LIGAR EM ID .)


state 54

    (25) acao -> EXECUTE DESLIGAR EM ID .

    ;               reduce using rule 25 (acao -> EXECUTE DESLIGAR EM ID .)
    SENAO           reduce using rule 25 (acao -> EXECUTE DESLIGAR EM ID .)


state 55

    (23) acao -> FACA LIGAR EM ID .

    ;               reduce using rule 23 (acao -> FACA LIGAR EM ID .)
    SENAO           reduce using rule 23 (acao -> FACA LIGAR EM ID .)


state 56

    (27) acao -> FACA DESLIGAR EM ID .

    ;               reduce using rule 27 (acao -> FACA DESLIGAR EM ID .)
    SENAO           reduce using rule 27 (acao -> FACA DESLIGAR EM ID .)


state 57

    (29) acao -> ALERTA PARA ID : . MSG
    (30) acao -> ALERTA PARA ID : . MSG , ID

    MSG             shift and go to state 63


state 58

    (31) acao -> DIFUNDIR : MSG ARROW . [ lista_ids ]

    [               shift and go to state 64


state 59

    (32) acao -> DIFUNDIR : MSG ID . ARROW [ lista_ids ]

    ARROW           shift and go to state 65


state 60

    (6) linha_device -> ID [ ID . ]

    ]               shift and go to state 66


state 61

    (15) obsv_acao -> QUANDO observacao : acao SENAO . acao
    (21) acao -> . EXECUTE LIGAR EM ID
    (22) acao -> . EXECUTE LIGAR ID
    (23) acao -> . FACA LIGAR EM ID
    (24) acao -> . FACA LIGAR ID
    (25) acao -> . EXECUTE DESLIGAR EM ID
    (26) acao -> . EXECUTE DESLIGAR ID
    (27) acao -> . FACA DESLIGAR EM ID
    (28) acao -> . FACA DESLIGAR ID
    (29) acao -> . ALERTA PARA ID : MSG
    (30) acao -> . ALERTA PARA ID : MSG , ID
    (31) acao -> . DIFUNDIR : MSG ARROW [ lista_ids ]
    (32) acao -> . DIFUNDIR : MSG ID ARROW [ lista_ids ]

    EXECUTE         shift and go to state 12
    FACA            shift and go to state 13
    ALERTA          shift and go to state 14
    DIFUNDIR        shift and go to state 15

    acao                           shift and go to state 67

state 62
